lint and standardization

--- a/src/api/training.ipynb
+++ b/src/api/training.ipynb
@@ -34,10 +34,12 @@
     "from sklearn.datasets import fetch_openml\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X, y = fetch_openml('mnist_784', return_X_y=True)\n",
+    "X, y = fetch_openml(\"mnist_784\", return_X_y=True)\n",
     "\n",
     "# We limit training to 10000 images for faster training. Remove train_size to use all examples.\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=1000, train_size=10000)"
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=1000, train_size=10000\n",
+    ")"
    ]
   },
   {
@@ -52,26 +54,27 @@
     "\n",
     "from scipy.ndimage import interpolation\n",
     "\n",
+    "\n",
     "def moments(image):\n",
-    "    c0, c1 = np.mgrid[:image.shape[0], :image.shape[1]]\n",
+    "    c0, c1 = np.mgrid[: image.shape[0], : image.shape[1]]\n",
     "    img_sum = np.sum(image)\n",
-    "    \n",
+    "\n",
     "    m0 = np.sum(c0 * image) / img_sum\n",
     "    m1 = np.sum(c1 * image) / img_sum\n",
-    "    m00 = np.sum((c0-m0)**2 * image) / img_sum\n",
-    "    m11 = np.sum((c1-m1)**2 * image) / img_sum\n",
-    "    m01 = np.sum((c0-m0) * (c1-m1) * image) / img_sum\n",
-    "    \n",
-    "    mu_vector = np.array([m0,m1])\n",
-    "    covariance_matrix = np.array([[m00, m01],[m01, m11]])\n",
-    "    \n",
+    "    m00 = np.sum((c0 - m0) ** 2 * image) / img_sum\n",
+    "    m11 = np.sum((c1 - m1) ** 2 * image) / img_sum\n",
+    "    m01 = np.sum((c0 - m0) * (c1 - m1) * image) / img_sum\n",
+    "\n",
+    "    mu_vector = np.array([m0, m1])\n",
+    "    covariance_matrix = np.array([[m00, m01], [m01, m11]])\n",
+    "\n",
     "    return mu_vector, covariance_matrix\n",
     "\n",
     "\n",
     "def deskew(image):\n",
     "    c, v = moments(image)\n",
-    "    alpha = v[0,1] / v[0,0]\n",
-    "    affine = np.array([[1,0], [alpha,1]])\n",
+    "    alpha = v[0, 1] / v[0, 0]\n",
+    "    affine = np.array([[1, 0], [alpha, 1]])\n",
     "    ocenter = np.array(image.shape) / 2.0\n",
     "    offset = c - np.dot(affine, ocenter)\n",
     "\n",
@@ -80,11 +83,11 @@
     "\n",
     "def deskew_images(images):\n",
     "    output_images = []\n",
-    "    \n",
+    "\n",
     "    for image in images:\n",
     "        output_images.append(deskew(image.reshape(28, 28)).flatten())\n",
-    "    \n",
-    "    return np.array(output_images)\n"
+    "\n",
+    "    return np.array(output_images)"
    ]
   },
   {
@@ -117,13 +120,12 @@
    "source": [
     "%%time\n",
     "\n",
-    "import sklearn\n",
     "import numpy as np\n",
-    "\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "import sklearn\n",
     "from sklearn import svm\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "print (f'Using scikit-learn version: {sklearn.__version__}')\n",
+    "print(f\"Using scikit-learn version: {sklearn.__version__}\")\n",
     "\n",
     "# Fit our training data\n",
     "clf = svm.SVC(degree=5)\n",
@@ -132,7 +134,7 @@
     "# Test the fitted model for accuracy for the accuracy score\n",
     "accuracy = accuracy_score(y_test, clf.predict(X_test))\n",
     "\n",
-    "print('Test accuracy without deskewing:', accuracy)"
+    "print(\"Test accuracy without deskewing:\", accuracy)"
    ]
   },
   {
@@ -163,7 +165,7 @@
     "# Test the fitted model for accuracy for the accuracy score\n",
     "accuracy = accuracy_score(y_test, clf.predict(deskew_images(X_test)))\n",
     "\n",
-    "print('Test accuracy with deskewing:', accuracy)"
+    "print(\"Test accuracy with deskewing:\", accuracy)"
    ]
   },
   {
@@ -187,7 +189,7 @@
     "import joblib\n",
     "\n",
     "# Save the model to disk with compression to keep size low\n",
-    "joblib.dump(clf, 'digit_classifier.joblib', compress=3)"
+    "joblib.dump(clf, \"digit_classifier.joblib\", compress=3)"
    ]
   },
   {
